--- a/projects.html
+++ b/projects.html
@@ -347,6 +347,7 @@ header h1 {
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </header>
