--- a/resume.html
+++ b/resume.html
@@ -286,6 +286,7 @@
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
 </header>
