--- a/contact.html
+++ b/contact.html
@@ -167,15 +167,8 @@
     @media (max-width: 768px) {
 
       .contact-card {
-        background: rgba(255, 255, 255, 0.97);
-        color: #000;
-        padding: 2rem 2.5rem;
-        border-radius: 15px;
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
-        max-width: 350px;
-        width: 100%;
-        text-align: center;
-        transition: transform 0.3s;
+        padding: 1.5rem;
+        max-width: 90%;
       }
       .modal-content {
         width: 90%;
@@ -271,13 +264,9 @@
         .nav-links a:hover {
           color: #FF5349;
         }
+      }
 
-        @keyframes fadeIn {
-          from { opacity: 0; transform: translateY(-10px); }
-          to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes fadeUp {
+      @keyframes fadeUp {
           from {
             opacity: 0;
             transform: translateY(30px);
@@ -290,23 +279,18 @@
 
         .fade-in {
           opacity: 0;
+          transform: translateY(30px);
+          transition: opacity 0.8s ease, transform 0.8s ease;
+        }
+
+        /* when it comes into view */
+        .appear {
+          opacity: 1;
+          transform: translateY(0);
           animation: fadeUp 0.8s ease-out forwards;
         }
 
-        .fade-in-delay-1 {
-          opacity: 0;
-          animation: fadeUp 0.8s ease-out forwards;
-          animation-delay: 0.2s;
-          animation-play-state: paused; /* ← Pause it at first */
-        }
 
-        .fade-in-delay-2 {
-          opacity: 0;
-          animation: fadeUp 0.8s ease-out forwards;
-          animation-delay: 0.4s;
-          animation-play-state: paused; /* ← Pause it at first */
-        }
-      }
   </style>
 </head>
 
@@ -338,7 +322,8 @@
 </header>
 
 <main>
-  <div class="contact-card">
+  <div class="contact-card fade-in">
+
     <h2>Get in Touch</h2>
     <p>If you'd like to connect, feel free to reach out using the form below or email me directly at <a class="email-link" href="mailto:justin.coppola@ufl.edu">justin.coppola@ufl.edu</a>.</p>
 
@@ -362,6 +347,24 @@
 </footer>
 
 <script>
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('appear');
+        observer.unobserve(entry.target); // Only animate once
+      }
+    });
+  }, {
+    threshold: 0.3
+  });
+
+  // 🔥 Observe all fade-in elements
+  document.querySelectorAll('.fade-in').forEach(element => {
+    observer.observe(element);
+  });
+
+
   function toggleMenu() {
     const navLinks = document.querySelector('.nav-links');
     const menuIcon = document.getElementById('menu-icon');
