--- a/projects.html
+++ b/projects.html
@@ -122,15 +122,28 @@
       margin: 0;
       text-align: center;
     }
+
     .modal {
       display: none;
       position: fixed;
       z-index: 2000;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      overflow: auto;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
       background-color: rgba(0,0,0,0.8);
+      opacity: 0;
+      transition: opacity 0.3s ease;
+      pointer-events: none; /* Disable clicking while hidden */
     }
+
+    .modal.show {
+      display: block;
+      opacity: 1;
+      pointer-events: auto; /* Allow clicks once shown */
+    }
+
+    /* Modal box */
     .modal-content {
       background-color: #fff;
       color: #000;
@@ -140,7 +153,16 @@
       width: 90%;
       max-width: 700px;
       position: relative;
+      transform: scale(0.95);
+      opacity: 0;
+      transition: transform 0.3s ease, opacity 0.3s ease;
     }
+
+    .modal.show .modal-content {
+      transform: scale(1);
+      opacity: 1;
+    }
+
     .close {
       color: #aaa;
       position: absolute;
@@ -316,11 +338,26 @@ header h1 {
 }
 
 
-/* Fade-in animation for mobile menu */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-10px); }
-  to { opacity: 1; transform: translateY(0); }
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.appear {
+  animation: fadeUp 0.8s ease forwards;
+}
+
 
   </style>
 </head>
@@ -358,14 +395,14 @@ header h1 {
 
   <h2 class="section-header">RTL / FPGA / Semiconductor Projects</h2>
   <div class="projects-grid">
-    <div class="project-card" onclick="openModal(0)">
+    <div class="project-card fade-in" onclick="openModal(0)">
       <div class="carousel">
         <img src="images/intel_logo.gif" class="active">
       </div>
       <h3>Intel RTL Sub-IP Design</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(1)">
+    <div class="project-card fade-in" onclick="openModal(1)">
       <div class="carousel">
         <img src="images/mips_project.PNG" class="active">
         <img src="images/waveform_MIPS.PNG">
@@ -373,7 +410,7 @@ header h1 {
       <h3>MIPS Microprocessor Design</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(2)">
+    <div class="project-card fade-in" onclick="openModal(2)">
       <div class="carousel">
         <img src="images/soc_camera_car.jpg" class="active">
         <img src="images/soc_car_auto.jpg">
@@ -381,7 +418,7 @@ header h1 {
       <h3>Autonomous Car on SoC</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(3)">
+    <div class="project-card fade-in" onclick="openModal(3)">
       <div class="carousel">
         <img src="images/pynq_board.png" class="active">
         <img src="images/pong_soc.jpg">
@@ -392,7 +429,7 @@ header h1 {
 
   <h2 class="section-header">Applied Engineering Projects</h2>
   <div class="projects-grid">
-    <div class="project-card" onclick="openModal(4)">
+    <div class="project-card fade-in" onclick="openModal(4)">
       <div class="carousel">
         <img src="images/fieros_car.jpg" class="active">
         <img src="images/fiero_restored.jpg">
@@ -400,7 +437,7 @@ header h1 {
       <h3>Pontiac Fiero Restoration</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(5)">
+    <div class="project-card fade-in" onclick="openModal(5)">
       <div class="carousel">
         <img src="images/roulette_circuit_diagram.png" class="active">
         <img src="images/roulette_pcb.png">
@@ -409,7 +446,7 @@ header h1 {
       <h3>Raspberry Pi Roulette</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(6)">
+    <div class="project-card fade-in" onclick="openModal(6)">
       <div class="carousel">
         <img src="images/up.jpg" class="active">
         <img src="images/waveform_up.png">
@@ -420,14 +457,14 @@ header h1 {
 
   <h2 class="section-header">Machine Learning Projects</h2>
   <div class="projects-grid">
-    <div class="project-card" onclick="openModal(7)">
+    <div class="project-card fade-in" onclick="openModal(7)">
       <div class="carousel">
         <img src="images/ds_flowchart.jpg" class="active">
       </div>
       <h3>Applied ML: Dempster-Shafer Fusion</h3>
     </div>
 
-    <div class="project-card" onclick="openModal(8)">
+    <div class="project-card fade-in" onclick="openModal(8)">
       <div class="carousel">
         <img src="images/flower_id.PNG" class="active">
       </div>
@@ -437,7 +474,7 @@ header h1 {
 
   <h2 class="section-header">Software & Automation Projects</h2>
   <div class="projects-grid">
-    <div class="project-card" onclick="openModal(9)">
+    <div class="project-card fade-in" onclick="openModal(9)">
       <div class="carousel">
         <img src="images/python_logo.jpg" class="active">
         <img src="images/twitter_logo.png">
@@ -539,22 +576,47 @@ header h1 {
   
     function openModal(index) {
       modalTitle.textContent = projects[index].title;
-      modalSubheader.textContent = projects[index].subheader; // ⭐ ADD THIS ⭐
+      modalSubheader.textContent = projects[index].subheader;
       modalDescription.textContent = projects[index].desc;
       modalSkills.textContent = projects[index].skills;
-      modal.style.display = 'block';
+      
+      modal.style.display = 'block'; // Start by setting display to block
+      setTimeout(() => {
+        modal.classList.add('show');
+      }, 10); // Tiny delay so CSS transition triggers properly
     }
-
 
     function closeModal() {
-      modal.style.display = 'none';
+      modal.classList.remove('show');
+      setTimeout(() => {
+        modal.style.display = 'none';
+      }, 300); // Match your CSS transition duration (300ms)
     }
-  
+
+    // Clicking outside the modal closes it
     window.onclick = function(event) {
       if (event.target == modal) {
         closeModal();
       }
     }
+
+    const observer = new IntersectionObserver((entries, observer) => {
+      entries.forEach((entry, index) => {
+        if (entry.isIntersecting) {
+          // 🔥 Set a different delay for each card
+          entry.target.style.animationDelay = `${index * 0.2}s`; 
+          entry.target.classList.add('appear');
+          observer.unobserve(entry.target);
+        }
+      });
+    }, {
+      threshold: 0.2
+    });
+
+    document.querySelectorAll('.fade-in').forEach((element) => {
+      observer.observe(element);
+    });
+
     function toggleMenu() {
       const navLinks = document.querySelector('.nav-links');
       const menuIcon = document.getElementById('menu-icon');
