--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
       height: 100%;
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom right, #FA4616, #0021A5);
+      background: linear-gradient(to bottom, #FA4616, #0021A5);
       background-attachment: fixed;
       color: #fff;
       overflow-x: hidden;
@@ -174,15 +174,6 @@
     }
     .close:hover {
       color: #000;
-    }
-    footer {
-      background: rgba(0, 33, 165, 0.9);
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      position: relative;
-      z-index: 1;
     }
     body {
   overscroll-behavior: none;
@@ -498,11 +489,6 @@ header h1 {
   </div>
 </div>
 
-  
-  <footer>
-    <p>&copy; 2025 Justin Coppola</p>
-  </footer>
-  
   <script>
     const modal = document.getElementById('modal');
     const modalTitle = document.getElementById('modalTitle');
