--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       height: 100%;
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom right, #FA4616, #0021A5);
+      background: linear-gradient(to bottom, #FA4616, #0021A5);
       background-attachment: fixed;
       color: #fff;
       overflow-x: hidden;
@@ -129,16 +129,6 @@
       color: #0021A5;
       font-weight: bold;
       text-decoration: underline;
-    }
-
-    footer {
-      background: rgba(0, 33, 165, 0.9);
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      position: relative;
-      z-index: 1;
     }
 
     @media (min-width: 769px) {
@@ -341,10 +331,6 @@
     </form>
   </div>
 </main>
-
-<footer>
-  <p>&copy; 2025 Justin Coppola</p>
-</footer>
 
 <script>
 
